--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
            #href="{{ site.github.zip_url }}" class="btn">Download as .zip</a>
             #href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
           {% endif %}
-          <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          #href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
     </header>
